--- a/_posts/2011-10-03-rubyists-time-to-learn-how-to-act.textile
+++ b/_posts/2011-10-03-rubyists-time-to-learn-how-to-act.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Rubyists: Time To Learn How to Act
+title: Rubyists, Time To Learn How to Act
 ---
 
 h1. {{ page.title }}
