--- a/_posts/2013-02-19-CTM-chapter-01.markdown
+++ b/_posts/2013-02-19-CTM-chapter-01.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The Beginning of a Long Journey"
+title: "The Beginning of a Long Journey: Notes on CTM Chapter 01"
 ---
 # 
 
