--- a/_posts/2013-03-04-CTM-chapter-02.markdown
+++ b/_posts/2013-03-04-CTM-chapter-02.markdown
@@ -9,7 +9,9 @@ published: false
 
 ### The Declarative Computation Model: Notes on _CTM_ Chapter 02
 
-This begins "Section 1: General Computation Models." It contains a breakdown of the concept of a Programming Language, how it relates to the computer that it runs on, and how it relates to the real world. The thesis of the book includes the idea of the Kernel Language, which is an attempt to create a compact, reasonable set of operations by which a programming language can be represented. This Kernel Language (hereafter KL) can be translated to a Programming Language, which the developer actually uses. This translation can take place by means of Functional Abstraction or Syntactic Sugar. The text is clear that the idea behind KLs is to be able to explore multiple programming paradigms, and we start with a Declarative KL that can represent the semantics of Declarative and Functional PLs.
+> "In our view, languages that scale to a significant level of complexity are successful in part because they model some essential aspects of how to construct complex programs. In this sense, these languages are not just arbitrary constructions of the human mind. We would therefore like to understand them in a scientific way, _i.e._, by explaining their behavior in terms of a simple underlying model. This is the deep motivation behind the kernel language approach." - _Section 2.1.2_
+
+This chapter begins "Section 1: General Computation Models." It contains a breakdown of the concept of a Programming Language, how it relates to the computer that it runs on, and how it relates to the real world. The thesis of the book includes the idea of the Kernel Language, which is an attempt to create a compact, reasonable set of operations by which a programming language can be represented. This Kernel Language (hereafter KL) can be translated to a Programming Language, which the developer actually uses. This translation can take place by means of Functional Abstraction or Syntactic Sugar. The text is clear that the idea behind KLs is to be able to explore multiple programming paradigms, and we start with a Declarative KL that can represent the semantics of Declarative and Functional PLs.
 
 #### How To Define A Grammar
 
@@ -33,11 +35,31 @@ You can use a simple procedure to read the grammars that appear throughout the b
 * For each nonterminal symbol, read its grammar rule and replace the nonterminal with the sequence of tokens that it expands into
 * Each time there is a choice (with $|$), pick any of the alternatives
 
-Context, syntax, and ambiguity.
+The trade-off in having as succinct a means of expressing the syntax of a language as EBNF provides is that it does not cover all of the rules of a practical programming language. EBNFs generate what are known as "context free grammars" because they assume a certain amount of context when asserting the correctness of some expressions in the language. Therefore the definition of the operation of most practical programming languages include a context free grammar in addition to a set of rules or conditions that must be satisfied before correct operation can be guaranteed.
+
+#### Context, Syntax, and Ambiguity
+
+The text deftly demonstrates how the formal semantics of a language cannot wholly express its behavior. There are other rules or contexts necessary to understand how code will operate. In addition to the conditions mentioned above, Context Free Grammars can be _ambiguous_ - several different parse trees can be generated from the same sequence of tokens. By adding rules for _precedence_ and _associativity_, we can avoid any ambiguities in expressions defined with operators. There is a table in Chapter 2 which describes these rules for all operations.
 
 #### Language Semantics and the Kernel Language Approach
 
 > "The semantics of a language defines what a program does when it executes."
+
+The authors are interested in provided a practical means by which programmers can reason about programs that they create in a rigorous way without having to sacrifice the expressiveness of the languages that they choose to employ. The mechanism that allows us to be rigorous and expressive simultaneously is called the kernel language approach. This chapter serves to introduce the idea, and to demonstrate the concepts with the simplest kernel language, known as the _declarative kernel language_.
+
+The _kernel language approach_ consists of two parts:
+
+1. Define a kernel language, which is a very simple language that represents the essence of the desired functionality of the end user language.
+2. Provide a translation scheme from the kernel language to a practical programming language.  Two means of extending a kernel language are provided: _linguistic abstraction_ and _syntactic sugar_.
+
+_I wrote an article detailing more about the pedagogy of the book as it relates to the kernel language approach. <a href="http://michaelrbernste.in/2013/02/23/notes-on-teaching-with-the-kernel-language-approach.html">Check it out here</a>._
+
+#### Translation
+
+*Linguistic Abstraction* is the business
+
+*Syntactic Sugar* is sweet
+
 
 #### The Mechanics of the Declarative Language
 
@@ -49,6 +71,8 @@ Context, syntax, and ambiguity.
 
 
 #### The Declarative Kernel Language
+
+<center><img src="/images/declarative_kernel.png"></center>
 
 * Syntax
 * Values and Types
@@ -69,40 +93,43 @@ Context, syntax, and ambiguity.
 * Definitions
 * Program Execution
 
-The section on program execution demonstrates how the following code:
+> "A single transition in a computation is called a computation step. A computation step is atomic, i.e., there are no visible intermediate states. It is as if the step is done 'all at once.'"
+
+The section on program execution demonstrates how the following code is executed by the abstract machine:
 
 {% highlight bash %}
-local X in
+local X in #<s> begin
   X = 1
-  local X in #s1 begin
+  local X in #<s>1 begin
     X = 2
     { Browse X }
-  end #s1 end
-  { Browse X } # s2
-end
+  end #<s>1 end
+  { Browse X } # <s>2 begin/end
+end #<s> end
 {% endhighlight %}
 
-is executed by the abstract machine. The exercise is to read the above code, reason about it, and predict what the execution will look like. The `Browse` function displays the value passted to it. As we've already seen a discussion of scope, it should be clear that the interesting aspects of how this program execute relate to the semantics of the kernel language.
+The exercise is to read the above code, reason about it, and predict what the execution will look like. The `Browse` function displays the value passed to it. As we've already seen a discussion of scope, it should be clear that the interesting aspects of how this program execute relate to the semantics of the kernel language.
 
-$$(E, \sigma)(1)$$
+$$(ST, \sigma)(1)$$
 $$([(\lt s \gt, \emptyset)], \emptyset)(2)$$
 $$([(\lt s \gt_1  \lt s \gt_2,\\{X \rightarrow x\\})], \\{x = 1\\})(3)$$
 $$([(\lt s \gt_1, \\{X \rightarrow x\\}),  (\lt s \gt_2,\\{X \rightarrow x\\})], \\{x = 1\\})(4)$$
 $$([(X=2, \\{Browse \space X\\}, \\{X \rightarrow x'\\}),  (\lt s \gt_2,\\{X \rightarrow x\\})], \\{x', x = 1\\})(5)$$
 $$([(\\{Browse \space X\\}, \\{X \rightarrow x'\\}),  (\\{Browse \space X\\}, \\{X \rightarrow x\\})], \\{x' = 2, x = 1\\})(6)$$
 
-$(1)$ The abstract machine consists of an environment $E$ and a value store $\sigma$.
+$(1)$ The execution state is represented by a stack of semantic statements $ST$ and a value store $\sigma$. A semantic statement is a pair $(\lt s \gt,E)$, where $\lt s \gt$ is a statement and $E$ is an environment - a mapping of variables to values stored in $\sigma$.
 
-$(2)$ The initalized form of our abstract machine. $E$ has been substituted by $\lt s \gt$, a statement which represents the outermost $local$ statement, and $\emptyset$, meaning there are not yet any mappings present.
+$(2)$ The initial execution state of our program in the abstract machine. $E$ has been substituted by $\lt s \gt$, a statement which represents the outermost $local$ statement in the program, and $\emptyset$, meaning there are not yet any mappings present. The value store has also been replaced with $\emptyset$ - it has no members.
 
-$(3)$ The outermost $local$ statement and $X = 1$ are executed, the identifier $X$ refers to the store variable $x$, and one binding ($x=1$) is added to the value store.
+$(3)$ The outermost $local$ statement and $X = 1$ are executed. There is a sequential composition $\lt s \gt_1\lt s \gt_2$ remaining, the environment reflects that $X$ refers to the store variable $x$, and one binding ($x=1$) is added to $\sigma$.
 
-$(4)$ After executing $\lt s \gt_1$ and $\lt s \gt_2$, we see that each end up with their own environments. We will execute each statement next.
+$(4)$ After executing the sequential composition we see that each statement ends up with its own environment; they are now on the execution stack. We will sequentially execute each statement next.
 
-$(5)$ Executing $\lt s \gt_1$ binds a new variable $x'$ and calculates a new environment. This has a semantic specification as well - given an initial $E$ of $\\{X \rightarrow x\\}$, adding $\\{X \rightarrow x'\\}$ to it will yield $\\{X \rightarrow x'\\}$. The second mapping of $X$ overrides the first.
+$(5)$ Executing $\lt s \gt_1$ binds a new variable $x'$ and calculates a new environment. This has a clear semantic specification; given an initial $E$ of $\\{X \rightarrow x\\}$, adding $\\{X \rightarrow x'\\}$ to it will yield $\\{X \rightarrow x'\\}$. The second mapping of $X$ overrides the first.
 
-$(6)$
+$(6)$ $\lt s \gt_2$ is a $Browse$ statment, and $X = 2$ is bound. From this we can tell that we will see $Browse$ run twice - the first will show 2, and the second will show 1.
 
+This simple exercise highlights the scoping semantics of the declarative kernel language. 
 
 #### Memory Management
 
@@ -117,21 +144,3 @@ $(6)$
 * Exceptions
 
 #### Functional Languages and Unification
-
-#### Unabridged Notes
-
-- Programming encompasses three things:
-- A computation model, which is a formal system defines a language and how sentences of the language are executed by an abstract machine
-- A set of programming techniques and design principles used to write programs in thel aguage of the comptuational model
-- A set of reasoning techniques to let you reason about programs
-- The declarative programming model, defined as "evaluating functions over partial data structures," is the first computational model that we'll see a kernel language for.
-- It is stateless as opposed to stateful or imperative
-- Declarative is fundamental and includes the core ideas of functional and declarative programming
-- What is a practical programming language? Much simpler than natural languages, but they can still have a very rich syntax
-- "A PPL is like the toolbox of an experienced mechanic"
-- It has a syntax (or "grammar") and a semantics (or "meaning")
-- "The syntax of a lnaguege defines what are the legal programs that can be successfully executed"
-- A grammer is "a set of rules that defines how to make sentences out of words"
-- statement -> tokens | tokens -> chars
-- "A program that accepts a sequence of characters and returns a sequence of tokens is called a lexical analyzer. A program that aaccepts a sequence of tokens and returns a parse tree is called a parser"
-- Extended Backus-Naur Form is introduced as a notation for defining grammars
