Not a lot of progress last night

--- a/_posts/2013-03-04-CTM-chapter-02.markdown
+++ b/_posts/2013-03-04-CTM-chapter-02.markdown
@@ -11,7 +11,7 @@ published: false
 
 > "In our view, languages that scale to a significant level of complexity are successful in part because they model some essential aspects of how to construct complex programs. In this sense, these languages are not just arbitrary constructions of the human mind. We would therefore like to understand them in a scientific way, _i.e._, by explaining their behavior in terms of a simple underlying model. This is the deep motivation behind the kernel language approach." - _Section 2.1.2_
 
-This chapter begins "Section 1: General Computation Models." It contains a breakdown of the concept of a Programming Language, how it relates to the computer that it runs on, and how it relates to the real world. The thesis of the book includes the idea of the Kernel Language, which is an attempt to create a compact, reasonable set of operations by which a programming language can be represented. This Kernel Language (hereafter KL) can be translated to a Programming Language, which the developer actually uses. This translation can take place by means of Functional Abstraction or Syntactic Sugar. The text is clear that the idea behind KLs is to be able to explore multiple programming paradigms, and we start with a Declarative KL that can represent the semantics of Declarative and Functional PLs.
+This chapter begins "Section 1: General Computation Models." It contains a breakdown of the concept of a Programming Language, how it relates to the computer that it runs on, and how it relates to the real world. The thesis of the book includes the idea of the Kernel Language, which is an attempt to create a compact, reasonable set of operations by which a programming language can be represented. This kernel language can be _translated_ to a practical programming language employed by the developer. This translation can take place by means of functional abstraction or syntactic sugar. The text is clear that the idea behind kernel languages is to be able to explore multiple programming paradigms, and we start with a declarative kernel language that can represent the semantics of declarative and functional programming languages.
 
 #### How To Define A Grammar
 
