--- a/_posts/2013-02-19-CTM-chapter-01.markdown
+++ b/_posts/2013-02-19-CTM-chapter-01.markdown
@@ -67,3 +67,5 @@ This chapter makes me very excited for the book though I'm nervous because I kno
 * "An operation is atomic if no intermediate states can be observed"
 * Atomicity is offered as a means to avoid race conditions
 * Locks are introduced as a mechanism to provide atomicity
+
+*If you like this article, please consider supporting my writing on <a href="https://www.gittip.com/mrb_bk/">gittip.</a>*
